--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ main {
   width: 300px;
   background-color: #eeeeee;
   padding: 10px;
+  margin-right: 30px;
 }
 
-.flow:nth-child(-n+2) {
-  margin-right: 30px;
+.flow:last-child {
+  margin-right: 0;
 }
 
 .img1 {
@@ -48,6 +49,7 @@ main {
 }
 
 .step {
+  padding: 3px;
   position: absolute;
   top: 0;
   left:0;
@@ -56,7 +58,7 @@ main {
 }
 
 .flow-heading {
-  padding: 15px 0 5px;
+  margin: 15px 0 5px;
 }
 
 footer {
