--- a/style.css
+++ b/style.css
@@ -3,3 +3,68 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #ff9a4b;
+}
+
+
+main {
+  width: 960px;
+  margin: 50px auto;
+  display: flex;
+}
+
+.flow-box {
+  width: 300px;
+  padding: 10px;
+  margin-right: 30px;
+  background-color: #eee;
+  position: relative;
+}
+
+.step {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ff9a4b;
+  color: #fff;
+  padding: 2px 0;
+}
+
+.img1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.img2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.img3 {
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.headline {
+  padding: 15px 0 5px 0;
+}
+
+.flow-box:last-child {
+  margin-right: 0;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #aaa;
+}
